# memoize.io

./: '  .gitignore  .pnp.cjs  Cargo.toml  README.md  package.json  wrangler.toml
.wrangler/tmp/bundle-CF2a15/: middleware-loader.entry.ts
.wrangler/tmp/bundle-HSfZx8/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-5inwho/: shim.js  shim.js.map
.wrangler/tmp/dev-PaGkFF/: 362325d39ea17de12c98cf7e7a00ae7cf9d26989-index.wasm  shim.js  shim.js.map
css/src/: lib.rs
html/src/: lib.rs
memoize/: package-lock.json  package.json  wrangler.toml
src/: assets.rs  css.rs  handler.rs  html.rs  lib.rs  loading.rs  main.rs  reset.rs  tokens.rs
src/head/: mod.rs  render.rs  template.rs
src/home/: handle.rs  mod.rs  render.rs  style.rs  styled.rs  template.rs
src/home/footer/: mod.rs  render.rs  style.css  styled.rs
src/home/footer/language/: mod.rs  render.rs  styled.rs
src/home/header/: mod.rs  render.rs  styled.rs
src/home/main/: mod.rs  render.rs  styled.rs
src/home/main/copy_write/: mod.rs  render.rs  styled.rs
src/home/main/github/: mod.rs  render.rs  styled.rs
src/home/main/illustration/: mod.rs  render.rs  styled.rs
src/home/main/linkedin/: mod.rs  render.rs  styled.rs
src/home/main/privacy_policy/: mod.rs  render.rs  styled.rs
src/home/main/terms_of_use/: mod.rs  render.rs  styled.rs
src/reset/: style.css
src/tokens/: color.css  fontFamily.css  mod.rs
