[package]
name = "memoize"
description = "Aprenda, Memorize, Domine!"
repository = "https://github.com/memoize-cards/memoize.io"
license = "CC BY-NC 4.0"
version = "0.0.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
