[package]
description = "Aprenda, Memorize, Domine!"
edition = "2021"
license = "CC BY-NC 4.0"
name = "memoize"
repository = "https://github.com/memoize-cards/memoize.io"
version = "0.0.1"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"

[profile.release]
codegen-units = 1
lto = true
strip = true
